// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a success message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    Success!!!!
  </div>
</DocumentFragment>
`;

exports[`displays an error message 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`does not render an error or a success message if message props is empty 1`] = `
<DocumentFragment>
  <div
    class="alert alert-error"
  />
</DocumentFragment>
`;
